<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/humidity_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_two">

    <TextView
        android:id="@+id/humidity_threshold_start_time_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/start_time"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/humidity_threshold_end_time_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/end_time"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/humidity_threshold_start_value_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/start_value"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/humidity_threshold_end_value_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/end_value"
        android:textAlignment="center"
        android:layout_weight="1"/>

</androidx.appcompat.widget.LinearLayoutCompat>