<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/temperature_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:background="@color/color_two">

    <TextView
        android:id="@+id/temperature_threshold_start_time_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_time"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/temperature_threshold_end_time_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/end_time"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/temperature_threshold_start_value_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_value"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/temperature_threshold_end_value_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/end_value"
        android:textAlignment="center"
        android:textSize="20sp" />

</androidx.appcompat.widget.LinearLayoutCompat>

<View
android:background="?colorOnPrimary"
android:layout_height="1dp"
android:layout_marginTop="1dp"
android:layout_width="match_parent" />
    </LinearLayout>