<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border_black"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        android:orientation="vertical"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/pop_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/start_time"
                android:textSize="20sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/select_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/end_time"
                android:textSize="20sp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/select_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/start_value"
                android:textSize="20sp"
                android:layout_marginEnd="5dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/select_start_value"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/end_value"
                android:textSize="20sp"
                android:layout_marginEnd="5dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/select_end_value" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>