<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#03A9F4"
    app:cardCornerRadius="10dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_new_threshold"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/select_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:text="@string/select_start_time"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/end_time"
        app:layout_constraintEnd_toStartOf="@+id/select_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

        <EditText
            android:id="@+id/select_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="time"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/select_end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_time"
            app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/select_end_time"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/start_value"
        app:layout_constraintEnd_toStartOf="@+id/select_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time" />

        <EditText
            android:id="@+id/select_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="time"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/select_start_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/end_time"
            app:layout_constraintTop_toBottomOf="@+id/select_start_time" />

    <TextView
        android:id="@+id/start_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/select_start_value"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/end_value"
        app:layout_constraintEnd_toStartOf="@+id/select_start_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_time" />

        <EditText
            android:id="@+id/select_start_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/select_end_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_value"
            app:layout_constraintTop_toBottomOf="@+id/select_end_time" />

    <TextView
        android:id="@+id/end_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/select_end_value"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toStartOf="@id/select_end_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_value" />

        <EditText
            android:id="@+id/select_end_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/end_value"
            app:layout_constraintTop_toBottomOf="@+id/select_start_value" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_end_value" />

</androidx.constraintlayout.widget.ConstraintLayout>